--- a/app/package.json
+++ b/app/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.10.10",
     "@mui/x-data-grid": "^5.17.7",
     "@reduxjs/toolkit": "^1.8.6",
