--- a/server/package.json
+++ b/server/package.json
@@ -11,13 +11,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "body-parser": "^1.20.0",
     "config": "^3.3.7",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "localtunnel": "^2.0.2",
     "mongoose": "^5.9.20",
-    "socket.io": "^4.5.3"
+    "mongoose-to-swagger": "^1.4.0",
+    "socket.io": "^4.5.3",
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-ui-express": "^4.5.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.6",
