--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "localtunnel": "^2.0.2",
     "mongoose": "^5.9.20",
     "mongoose-to-swagger": "^1.4.0",
+    "serverless-http": "^3.1.0",
     "socket.io": "^4.5.3",
     "swagger-jsdoc": "^6.2.5",
     "swagger-ui-express": "^4.5.0"
