--- a/server/package.json
+++ b/server/package.json
@@ -5,21 +5,27 @@
   "main": "app.js",
   "scripts": {
     "build": "tsc",
-    "start": "concurrently \"tsc -w\" \"nodemon dist/js/app.js\""
+    "start": "concurrently \"tsc -w\" \"nodemon dist/js/app.js\"",
+    "start:server": "netlify-lambda serve dist/js",
+    "build:server": "netlify-lambda build dist/js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/saslprep": "^1.0.1",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
     "body-parser": "^1.20.0",
     "config": "^3.3.7",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "localtunnel": "^2.0.2",
     "mongoose": "^5.9.20",
     "mongoose-to-swagger": "^1.4.0",
+    "netlify-lambda": "^2.0.15",
+    "saslprep": "^1.0.3",
     "serverless-http": "^3.1.0",
     "socket.io": "^4.5.3",
     "swagger-jsdoc": "^6.2.5",
