--- a/server/package.json
+++ b/server/package.json
@@ -38,5 +38,9 @@
     "@types/node": "^14.0.14",
     "concurrently": "^5.2.0",
     "nodemon": "^2.0.4"
+  },
+  "engines": {
+    "node": "14.x",
+    "yarn": "1.22.17"
   }
 }
