--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "build": "tsc",
-    "start": "concurrently \"tsc -w\" \"nodemon dist/js/app.js\"",
+    "start": "node dist/js/app.js",
+    "build:dev": "tsc",
+    "start:dev": "concurrently \"tsc -w\" \"nodemon dist/js/app.js\"",
     "start:server": "netlify-lambda serve dist/js",
     "build:server": "netlify-lambda build dist/js"
   },
